<resources>
    <string name="app_name">Smappio</string>

    <string name="navigation_drawer_open">Abrir barra de navegación</string>
    <string name="navigation_drawer_close">Cerrar barra de navegación</string>
    <string name="nav_header_title">Smappio</string>
    <string name="nav_header_subtitle">smappio@smappio.com</string>
    <string name="nav_header_desc">Cabecera de navegación</string>
    <string name="action_settings">Configuración</string>

    <!-- Labels -->
    <string name="str_0_00">0:00</string>
    <string name="str_00_00">00:00</string>
    <string name="str_alerta">Alerta</string>
    <string name="str_aceptar">Aceptar</string>
    <string name="str_archivos">Archivos</string>
    <string name="str_auscultar">Auscultar</string>
    <string name="str_ayuda">Ayuda</string>
    <string name="str_buscar">Buscar</string>
    <string name="str_cancelar">Cancelar</string>
    <string name="str_cerrar">Cerrar</string>
    <string name="str_compartir">Compartir</string>
    <string name="str_conectado">Conectado</string>
    <string name="str_conectar">Conectar</string>
    <string name="str_contrasenia">Contraseña</string>
    <string name="str_desconectado">Desconectado</string>
    <string name="str_manual_usuario">Manual de Usuario</string>
    <string name="str_mostrar">Mostrar</string>
    <string name="str_smappio">Smappio</string>
    <string name="str_wifi">Wi-Fi</string>

    <!-- Messages -->
    <string name="msg_permisos">Para usar esta aplicación debe conceder todos los permisos. Ingrese nuevamente.</string>
    <string name="msg_vinculado_a">Vinculado a %1$s</string>
    <string name="msg_activar_servicio_localizacion">Se debe activar el servicio de localización.</string>
    <string name="msg_buscando_dispositivo">Buscando Dispositivo …</string>
    <string name="msg_conectarse_a">Conectarse a %1$s</string>
    <string name="msg_conecto_a_dispositivo">Se conectó al dispositivo</string>
    <string name="msg_desea_eliminar_archivo">¿Está seguro que desea eliminar el archivo?</string>
    <string name="msg_desconecto_dispositivo_conectelo">Se desconectó el dispositivo. Por favor, conéctelo nuevamente.</string>
    <string name="msg_guardar_audio_capturado">¿Desea guardar el audio capturado?</string>
    <string name="msg_guardar_audio">Guardar audio</string>
    <string name="msg_ingrese_nombre_archivo">Por favor, ingrese el nombre del archivo.</string>
    <string name="msg_guardo_archivo_correctamente">Se guardó el archivo correctamente</string>

    <!-- Helps -->
    <string name="msg_ayuda_1">
        Bienvenido a la aplicación de Smappio, esta es una simple guía para poder conectarse al dispositivo y realizar auscultaciones.
        Por favor, siga las instrucciones.
    </string>
    <string name="msg_ayuda_2">
        Si desea utilizar esta aplicación se necesita otorgar los permisos solicitados. (Explicar porque)
    </string>
    <string name="msg_ayuda_3">
        - Para vincular este dispositivo con el estetoscopio de Smappio, primero asegurarse de que el mismo
        esté encendido (puede verificarlo por la luz de color verde). Luego presionar el botón que figura sobre
        la pantalla principal para conectarse:
    </string>
    <string name="msg_ayuda_4">
        Luego de haber presionado el botón de conexión, se abrirá la pantalla para buscar el dispositivo de Smappio.
        Se necesitará tener activada la tecnología Wi-Fi y el Servicio de Localización (GPS). En caso de tener deshabilitado
        el Wi-Fi, podrá activarlo pulsando el switch de la parte superior. Al pulsar sobre el botón "Buscar", se verificará
        el estado del Servicio de Localización, si se encuentra apagado aparecerá un mensaje y el usuario podrá optar por
        activarlo o no. Luego de cumplir estas condiciones, se podrá realizar la busqueda del dispositivo y aparecerá
        en la pantalla.
    </string>
    <string name="msg_ayuda_5">
        Al presionar sobre el dispositivo al cual se desea conectar, se solocitará la contraseña del mismo. Luego de
        haberla ingresado correctamente, se retornará a la pantalla principal.
    </string>
    <string name="msg_ayuda_6">
        - Para realizar una auscultación, una vez finalizada la vinculación del dispositivo Smappio, aparecerá en
        la pantalla principal el siguiente botón que deberá pulsar e inmediatamente podrá tomar la muestra:
    </string>
    <string name="msg_ayuda_7">
        La auscultación tiene un tiempo máximo de 30 segundos. Si desea terminarla antes, deberá presionar sobre el
        botón:
    </string>
    <string name="msg_ayuda_8">
        Luego seguir los pasos para guardar el sonido capturado. Dentro del directorio principal de Smappio
        (../DCIM/Smappio), se solicitará elegir la carpeta donde guardar el archivo o crear una nueva. Y posteriormente,
        introducir un nombre de archivo. Queda a disposición del usuario la organización interna y las nomenclaturas a utilizar.
    </string>
	
	<!-- RingDroid -->
	<string name="ringdroid_app_name">Ringdroid</string>

    <!--
     Main / media select activity
     -->

    <string name="main_activity_label">Ringdroid</string>

    <string name="search_edit_box">Search</string>

    <string name="button_start_record_activity">Record New</string>

    <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only and Ringdroid requires it to be writable.</string>
    <string name="no_sdcard">Sorry, Ringdroid can\'t run unless you have an SD Card inserted.</string>
    <string name="sdcard_shared">Sorry, Ringdroid can\'t run while your handset is mounted as a USB device.</string>

    <string name="button_options">Options</string>

    <!--
     Edit activity
     -->

    <!-- Labels next to the start and end time edit boxes -->
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>

    <string name="edit_intent">Edit</string>

    <string name="time_seconds">seconds</string>

    <!-- After you save a notification or ringtone and have more options
         for what to do with them -->
    <string name="what_to_do_with_ringtone">Saved!  Make this your default ringtone or assign it to a contact?</string>
    <string name="set_default_notification">Saved!  Make this your default notification?</string>

    <string name="make_default_ringtone_button">Make Default</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="do_nothing_with_ringtone_button">Close</string>

    <!-- Progress dialog text for loading, recording, or saving... -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>

    <!-- Image button descriptions for accessibility -->

    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_button">Save</string>

    <!--
     Menu items
     -->

    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_show_all_audio">Show All Audio</string>

    <!--
     Context menu items
     -->

    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_default_notification">Set as Default Notification</string>

    <!--
     File Save dialog
     -->

    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>

    <string name="ringtone_type_label">Type:</string>

    <string name="type_music">Music</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>

    <string name="ringtone_name_label">Name:</string>

    <string name="artist_name">Ringdroid</string>

    <!--
     Delete confirmation dialog
     -->

    <string name="delete_ringtone">Delete Ringtone</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="delete_music">Delete Music</string>
    <string name="delete_audio">Delete Audio</string>

    <string name="confirm_delete_ringdroid">Are you sure?</string>
    <string name="confirm_delete_non_ringdroid"
        >Are you sure?  This file was not created using Ringdroid!</string>

    <string name="delete_ok_button">Delete</string>
    <string name="delete_cancel_button">Cancel</string>

    <string name="delete_failed">Unable to delete file</string>

    <!--
     Success and error messages
     -->

    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>

    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_notification_success_message">Changed default notification sound</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>

    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>

    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Ringdroid can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>

    <!--
     Choose Contact Activity
     -->

    <string name="choose_contact_title">Assign ringtone to which contact?</string>
    <string name="success_contact_ringtone">Successfully assigned ringtone to:</string>

    <!--
     About
     -->

    <string name="about_title">About Ringdroid</string>
    <string name="about_text"><![CDATA[Use Ringdroid to edit MP3, OGG, WAV, AAC, and AMR audio files and create ringtones, alarms, and notifications from them.\n\nTip: copy audio files to your SD card using a USB cable.\n\nTip: tap anywhere on the waveform to start playing at that position.\n\nTip: while playing, tap the word Start or End to quickly set the start and end markers to the current playback time.\n\nVersion %s\n\nDeveloper: Dominic Mazzoni, Nicolas Faralli\nGraphics: Joseph Wain\nSupport and evangelizing: Eugene Koh\nEnhancements: Dan Klufas\n\nRingdroid is free software, distributed under the Apache 2.0 license.  Source code is on github.com/google/ringdroid\n]]></string>

</resources>
